# EVE-ONLINE-OVERVIEW-FORGE

./: .gitignore  AGENTS.md  GAP-CHECK-PLAN.md  GUI-PLAN.md  MANIFEST.in  Overview-research-report.md  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
Examples/: standard_complete_overview.yaml
scripts/: build_portable.py  gui_smoke_qa.py
src/eve_overview_manager/: __init__.py  cli.py
src/eve_overview_manager/generator/: __init__.py  builder.py
src/eve_overview_manager/gui/: server.py  state.py
src/eve_overview_manager/json_io/: __init__.py  exporter.py  parser.py
src/eve_overview_manager/models/: __init__.py  generator.py  overview.py  profile.py  project.py  snapshot.py  validation.py
src/eve_overview_manager/preview/: __init__.py  engine.py
src/eve_overview_manager/profiles/: __init__.py  backup.py  clone_executor.py  (+8 more)
tests/: test_character_clone_planner.py  test_cli.py  test_clone_planner.py  test_examples.py  test_generator.py  test_gui_character_clone_route.py  test_gui_editor_routes.py  test_gui_import_export_routes.py  test_gui_preferences_routes.py  test_gui_preview_route.py  test_gui_profiles_routes.py  test_gui_services.py  test_gui_snapshots_routes.py  test_gui_static_catalog.py  test_json_io.py  test_name_resolver.py  test_preview_engine.py  test_profile_package_export.py  test_profile_package_import_executor.py  test_profile_package_import_planner.py  test_profile_report.py  test_profile_scanner.py  test_profile_snapshot_library.py  test_project_io.py  test_sde.py  test_snapshots.py  test_validation_rules.py  test_yaml_roundtrip.py
(+45 files in other folders)
