[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-overview-manager"
version = "0.1.0"
description = "Local EVE Online overview settings and profile helper foundation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Tehl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2,<3",
    "ruamel.yaml>=0.18,<0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "playwright>=1.45",
]
gui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/Tehl/eve-overview"
Repository = "https://github.com/Tehl/eve-overview"
Issues = "https://github.com/Tehl/eve-overview/issues"

[project.scripts]
eve-overview = "eve_overview_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eve_overview_manager = [
    "gui/static/*.html",
    "gui/static/*.css",
    "gui/static/*.js",
    "gui/static/screens/*.js",
    "gui/static/data/*.json",
    "templates/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
